--- a/gb/22/10/11/n13842921.md
+++ b/gb/22/10/11/n13842921.md
@@ -13,39 +13,32 @@
 <figure id="13842922" aria-describedby="caption-13842922" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/10/id13842922-579504-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2022/10/id13842922-579504-450x338.jpg" alt="卫生福利部桃园疗养院成人日间病房在肺炎疫情冲击下，办理欢唱杯卡拉OK歌唱比赛。" width="500" /></a><figcaption id="caption-13842922" class="wp-caption-text">卫生福利部桃园疗养院成人日间病房在肺炎疫情冲击下，办理欢唱杯卡拉OK歌唱比赛。（卫生福利部桃园疗养院提供）</figcaption></figure>
 <p>责任编辑：杜文卿</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/4/19/n13715113.md#1">桃疗首创智慧医疗与远距心理关怀导入检疫所</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/6/2/n13750751.md#1">粽情减疫同舟共济 桃疗为同仁打气</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/12/n13800763.md#1">精神照护走进偏乡 桃园疗养院精神科居家治疗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/12/n13801053.md#1">“前进检疫所桃疗礼赞”  桃园疗养院专书发表</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/8/n13819864.md#1">桃疗与乐桃桃携手为同仁及志工带（袋）幸福</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/26/n14623586.md#1">龟山社宅工程崩塌已抢修完成 将加固工程完成后始复工</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/23/n14622060.md#1">“幸福扬眉 温馨美好” 桃园市杨梅区重阳敬老表扬</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/23/n14622058.md#1">元智大学突破绿氢技术 次世代PEM电解水系统获双奖</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/23/n14622048.md#1">回望与展望间 桃园设计库压轴青年设计力绽放与延续</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/23/n14622024.md#1">桃园市立美术馆获2025年缪斯创意奖及金点设计奖肯定</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/24/n10806244.md#1" target="_blank">林辉：当炮灰还成“叛徒”王成原型人生尽毁</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/31/n11490640.md#1" target="_blank">来自摩尔多瓦的心声：道德是人类真正价值</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/7/n11922778.md?dfh#1" target="_blank">了解法轮功：见证奇迹 解开生命奥秘</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/12/n10846318.md#1" target="_blank">共产暴政录：疯狂恐怖的“红八月”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/20/n10921963.md#1" target="_blank">福国利民 2018年法轮功所获各类褒奖</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/23/n14622152.md#1">科学家濒死7秒经历神奇事件 颠覆人生认知</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/19/n14619422.md#1">【未解之谜】天才科学家杨定一的灵性之路</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/11/n14614307.md#1">汉朝丞相公孙弘：海边放猪户扭转人生</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/15/n14616650.md#1">哈尔斯的《笑面骑士》：艺术史上最英俊男子</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/14/n14615995.md#1">最是想念的季节：珍藏霜降之美 深秋平补养生有道</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/25/n14623448.md#1">【军事情报局】乌军无人机重创俄能源命脉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/12/n14369807.md#1">【品读唐诗】以山水悟禅的题寺诗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/26/n14623804.md#1">【直播】川普与马来西亚总理签署合作协议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/18/n14619158.md#1">专家：活摘器官是中共“最红的红线”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/25/n14623251.md#1">四中全会后北京现大幅标语 指中共是邪教</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/24/n14623003.md#1">台知名餐饮公司在大陆爆关店潮 转向美国发展</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/25/n14623472.md#1">赵露思解约成功且免付天价违约金 原因曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/23/n14622525.md#1">黄晓明路演尴尬 新片预售票房仅10万元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/24/n14623053.md#1">林心如陆综才播一集突喊卡 “震撼原因”曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/24/n14623041.md#1">女星宋伊人疑涉于朦胧案 被爆买“网军”翻车</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/24/n14623004.md#1">章子怡与汪峰离婚2年 9岁女儿抚养权发生变更</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/24/n14622679.md#1">2025年美国空服员的薪资有多少？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/26/n14623591.md#1">为什么女性爱穿尖头鞋？ 会痛还要穿？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/24/n14622778.md#1">有白发不是坏事？ 研究：这是防癌机制</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/23/n14621980.md#1">这几种冰淇淋替代品能满足你对甜食的渴望</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/21/n14620561.md#1">青菜炒肉搭配酱汁 煮出美味佳肴</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651592.md#1">【直播】反对中共活摘器官和侵犯人权行为论坛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651956.md#1">【直播】听证会：保护儿童免受网络犯罪分子侵害</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651951.md#1">【军事情报局】东南亚爆发战争 泰国攻入柬埔寨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638627.md#1">中产阶级想成为富人 需避免五大消费习惯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650329.md#1">十年来首次降价 五粮液开票价每瓶下调119元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/10/11/n13842921.htm">桃疗日间病房人气K歌王   歌声传递自己的感受</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/10/11/n13842921.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
